Added an exchange currency rate inscription

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		</div>
 		<div class="resultWrap">
 			<p class="result">Result: <span>---</span></p>
+			<p class="rate"></p>
 		</div>
 	</div>
 	<script src="script.js"></script>
